--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -58,6 +58,17 @@ input[type="date"], input[type="datetime-local"] {
 	}
 }
 
+textarea {
+	border: 1px solid white;
+	background-color: black;
+	font-size: 16px;
+
+	&:focus {
+		border: 1px solid $AccentColor;
+		outline: 1px solid $AccentColor;
+	}
+}
+
 select {
 	background-color: black;
 	outline: 1px solid white;
