--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -32,4 +32,12 @@
 	> span:nth-of-type(2) {
 		width: 210px;
 	}
+	
+	textarea {
+		height: 2.5em;
+		width: 10em;
+		min-height: 2.5em;
+		min-width: 10em;
+		resize: both;
+	}
 }
