--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -79,6 +79,8 @@
 	{
 		<span>F Year is greater than the max year</span>
 	}
+	
+	<input type="datetime-local" @bind="@ImportItem.CustomDateTaken" step="1"/>
 
 	<IconButton Icon="@(ImportItem.Starred ? "star" : "star_outline")" Class="starBtn" OnClick="@ToggleStarred"/>
 
