--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -190,13 +190,9 @@
 
 		> div {
 			@include flex-row;
+			gap: 4px;
 			margin-right: 4px;
 			margin-bottom: 4px;
-
-			> .iconBtn {
-				margin-left: 2px;
-				margin-right: 2px;
-			}
 		}
 	}
 	
