--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -34,6 +34,14 @@
 		width: 210px;
 	}
 	
+	&:hover > select {
+		display: inline;
+	}
+	
+	> select {
+		display: none;
+	}
+	
 	.starBtn:hover { background: none; }
 	
 	textarea {
