--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -36,7 +36,7 @@
 
 	&:hover {
 		> select { display: inline; }
-		
+		> .starBtn { display: flex !important; }
 		> textarea { display: inline !important; }
 	}
 
