--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -4,6 +4,7 @@
 
 <title>Import - MemoryMosaic</title>
 <link href="css/Pages/Import.css" rel="stylesheet"/>
+<link href="css/Components/Import/ImportItemDisplay.css" rel="stylesheet"/>
 
 <header>
 
