--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -1,4 +1,4 @@
-@page "/import"
+﻿@page "/import"
 @using System.Text
 @using MemoryMosaic.DataStructures
 
@@ -15,9 +15,9 @@
 </header>
 
 <main>
-	@foreach (ImportItem importItem in importItems)
+	@for (int i = 0; i < importItems.Count; i++)
 	{
-		<ImportItemDisplay Import="@this" ImportItem="@importItem"/>
+		<ImportItemDisplay Import="@this" ImportItem="@importItems[i]" Index="@i"/>
 	}
 </main>
 
@@ -25,7 +25,7 @@
 
 @* <FullscreenViewer @ref="@fv" T="@Media" CollectionSelector="@cs" RerenderParent="@StateHasChanged" Content="" DisplayItemType="true"/> *@
 
-<KeyboardShortcuts AltS="@TogglePathWidth"/>
+<KeyboardShortcuts AltS="@TogglePathWidth" Esc="@ClearChecks"/>
 
 @code {
 	private CollectionSelector cs = null!;
@@ -37,6 +37,8 @@
 	public HashSet<Guid> SelectedItems { get; private set; } = new();
 
 	public string PathWidth { get; private set; } = "short";
+
+	public int LastCheckedIndex { get; set; }
 
 	public int MinYear { get; private set; } = 2000;
 	public int MaxYear { get; private set; } = DateTime.Now.Year;
@@ -74,5 +76,15 @@
 	{
 		PathWidth = PathWidth == "short" ? "full" : "short";
 		Rerender();
+	}
+	
+	public void ChangeRangeState(int startIndex, int endIndex)
+	{
+		int increment = startIndex < endIndex ? 1 : -1;
+
+		for (int i = startIndex; i != endIndex + increment; i += increment)
+			SelectedItems.Add(importItems[i].Id);
+
+		StateHasChanged();
 	}
 }
