Fix width of path not staying at 220px when hovered

--- a/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
+++ b/MemoryMosaic/Styles/Components/Import/ImportItemDisplay.scss
@@ -20,7 +20,10 @@
 		&.short {
 			width: 220px;
 
-			&:hover { width: auto; }
+			&:hover {
+				min-width: 220px;
+				width: auto;
+			}
 		}
 
 		&.full { width: auto; }
