--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -5,6 +5,7 @@
 <title>Import - MemoryMosaic</title>
 <link href="css/Pages/Import.css" rel="stylesheet"/>
 <link href="css/Components/Import/ImportItemDisplay.css" rel="stylesheet"/>
+<link href="css/Components/Import/LibraryItemDisplay.css" rel="stylesheet"/>
 
 <header>
 	@if (SelectedItems.Count > 0)
