--- a/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
@@ -1,27 +1,24 @@
-﻿@* @using MemoryMosaic.Pages *@
-@* <link href="css/Components/Import/LibraryItemDisplay.css" rel="stylesheet"/> *@
+﻿@using MemoryMosaic.Pages
 
-@* <div class="libraryItem"> *@
-	@* <MaterialIcon Icon="check_circle" Class="checkbox unchecked"/> *@
-	@* <img src="data:image/jpg;base64,@LibraryItem.thumbnail" onclick="window.open('mm_library/@LibraryItem.path', '_blank').focus()" alt="" loading="lazy"/> *@
-	@* <span class="shortPath @(Import.pathWidthClass == "shortWidth" ? "shortWidth" : "fullWidth")">@("Library/" + LibraryItem.path)</span> *@
-	@* <span class="dateTaken">@(LibraryItem.dateTaken == null ? "No Date Taken" : LibraryItem.dateTaken)</span> *@
-	@* <span class="inTrash">@(LibraryItem.dateDeleted != null ? "In Trash" : "")</span> *@
-	@* <IconButton Icon="trash" OnClick="@DeleteBtnClick"/> *@
-@* </div> *@
+<div class="libraryItem">
+	<img src="data:image/jpg;base64,@LibraryItem.Thumbnail" alt="" loading="lazy"/>
+	<span class="@Import.PathWidth">@("Library/" + LibraryItem.Path)</span>
+	<span>@(LibraryItem.DateTaken == null ? "No Date Taken" : LibraryItem.DateTaken)</span>
+	<span>@(LibraryItem.DateDeleted != null ? "In Trash" : "")</span>
+	<IconButton Icon="trash" OnClick="@DeleteBtnClick"/>
+</div>
 
-@* @code { *@
+@code {
+	[Parameter, EditorRequired] public Import Import { get; set; } = null!;
+	
+	[Parameter, EditorRequired] public LibraryItem LibraryItem { get; set; } = null!;
 
-	@* [Parameter, EditorRequired] public LibraryItem LibraryItem { get; set; } = null!; *@
-
-	@* [Parameter, EditorRequired] public Action Rerender { get; set; } = null!; *@
-
-	@* private void DeleteBtnClick() *@
-	@* { *@
-		@* if (LibraryItem.dateDeleted == null) *@
-			@* C.MoveToTrash(LibraryItem.Id); *@
-		@* C.RemoveFromTrash(LibraryItem.Id); *@
-		@* Import.OrganizeItems(); *@
-		@* Rerender.Invoke(); *@
-	@* } *@
-@* } *@
+	private void DeleteBtnClick()
+	{
+		if (LibraryItem.DateDeleted == null)
+			C.MoveToTrash(LibraryItem.Id);
+		C.RemoveFromTrash(LibraryItem);
+		// Import.OrganizeItems(); //TODO
+		Import.Rerender();
+	}
+}
