--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -1,6 +1,7 @@
 @page "/import"
 @using System.Text
 @using MemoryMosaic.DataStructures
+@using System.Collections.Immutable
 
 <title>Import - MemoryMosaic</title>
 <link href="css/Pages/Import.css" rel="stylesheet"/>
@@ -29,7 +30,24 @@
 <main>
 	@for (int i = 0; i < importItems.Count; i++)
 	{
-		<ImportItemDisplay Import="@this" ImportItem="@importItems[i]" Index="@i"/>
+		int ii = i;
+		ImmutableArray<LibraryItem> libraryItems = LibraryCache.Values.Where(item => importItems[ii].Filename.Contains(item.Filename)).ToImmutableArray();
+
+		if (libraryItems.Any())
+		{
+			<div class="errorDiv">
+				<ImportItemDisplay Import="@this" ImportItem="@importItems[i]" Index="@i"/>
+
+				@foreach (var libraryItem in libraryItems)
+				{
+					<LibraryItemDisplay LibraryItem="@libraryItem" Import="@this"/>
+				}
+			</div>
+		}
+		else
+		{
+			<ImportItemDisplay ImportItem="@importItems[i]" Index="@i" Import="@this"/>
+		}
 	}
 </main>
 
@@ -57,9 +75,9 @@
 
 	private bool finishedLoading;
 
-	private List<LibraryItem> libraryCache = null!, filesWithSameName = new(), filesWithSimilarName = new();
+	public Dictionary<string, LibraryItem> LibraryCache { get; private set; } = null!;
 
-	private readonly List<ImportItem> importItems = new();
+	private List<ImportItem> importItems = new();
 }
 
 @functions {
@@ -67,11 +85,15 @@
 	{
 		L.LogLine($"Begin Import.{nameof(OnInitialized)}", LogLevel.Info);
 
+		LibraryCache = C.GetEntireLibrary().ToDictionary(key => key.Path, value => value);
+
 		Parallel.ForEach(F.GetSupportedFiles(S.ImportFolderPath), (absPath, _) =>
 		{
 			ImportItem importFile = new(absPath.Replace('\\', '/'));
 			importItems.Add(importFile);
 		});
+
+		SortItems();
 
 		L.LogLine($"Finish Import.{nameof(OnInitialized)}", LogLevel.Info);
 	}
@@ -98,6 +120,13 @@
 			SelectedItems.Add(importItems[i].Id);
 
 		StateHasChanged();
+	}
+
+	private void SortItems()
+	{
+		importItems = importItems.OrderByDescending(item => LibraryCache.Count(libItem => P.GetFileName(libItem.Key).Contains(item.Filename)))
+			.ThenBy(item => item.Filename)
+			.ToList();
 	}
 
 	private async void AddItems()
