--- a/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/ImportItemDisplay.razor
@@ -49,7 +49,7 @@
 		</div>
 	}
 
-	<select @bind="@ImportItem.DateTakenSource">
+	<select @bind="@ImportItem.DateTakenSource" @bind:after="@Import.Rerender">
 		@if (ImportItem.MetadataDateTaken != null)
 		{
 			<option>Metadata</option>
@@ -81,7 +81,7 @@
 
 	@if (ImportItem.DateTakenSource == DateTakenSource.Custom)
 	{
-		<input type="datetime-local" @bind="@ImportItem.CustomDateTaken" step="1"/>
+		<input type="datetime-local" @bind="@ImportItem.CustomDateTaken" @bind:after="@Import.Rerender" step="1"/>
 	}
 
 	<IconButton Icon="@(ImportItem.Starred ? "star" : "star_outline")" Class="starBtn" Style="@($"display: {(ImportItem.Starred ? "flex" : "none")}")" OnClick="@ToggleStarred"/>
