--- a/MemoryMosaic/Styles/Pages/Import.scss
+++ b/MemoryMosaic/Styles/Pages/Import.scss
@@ -13,8 +13,9 @@ main {
 	@include flex-main(column, 64px);
 	@include available-width;
 	
-	> .errorDiv {
+	> .errorContainer {
 		border: 4px solid red;
+		border-radius: 4px;
 		margin-top: 3px;
 		margin-bottom: 3px;
 	}
